update: changement du titre

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="une application pour la generation de qr code distinée au carte ou badge du CISAEH">
+    <meta name="author" content="Oumar Guissé - 'The Big Tenor'">
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="qrcode.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>QR Codes avec Logo</h1>
+        <header class="header">
+            <h1>CISAEH QR Codes</h1>
+        </header>
         
         <div class="form-container">
             <div class="success-message" id="success-message">QR Code généré avec succès!</div>
