--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
 <body>
     <div class="container" role="main">
         <header class="header" role="banner">
-            <h1>Générateur de QR Code CISAEH</h1>
-            <p class="subtitle">Créez facilement vos propres QR codes personnalisés</p>
+            <div class="logo-container">
+                <img src="images/logo_CISAEH_transparent.png.png" alt="Logo CISAEH" class="logo">
+                <div class="header-text">
+                    <h1>Générateur de QR Code CISAEH</h1>
+                    <p class="subtitle">Créez facilement vos propres QR codes personnalisés</p>
+                </div>
+            </div>
         </header>
         
         <section class="form-section" aria-labelledby="form-title">
