update -  changemet du l'image dans le mode sombre

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container" role="main">
         <header class="header" role="banner">
             <div class="logo-container">
-                <img src="images/logo_CISAEH_transparent.png.png" alt="Logo CISAEH" class="logo">
+                <img id="logo-image" src="images/logo_CISAEH_transparent.png.png" alt="Logo CISAEH" class="logo">
                 <div class="header-text">
                     <h1>Générateur de QR Code CISAEH</h1>
                     <p class="subtitle">Créez facilement vos propres QR codes personnalisés</p>
